<resources>
    <string name="app_name">Popular Movies</string>
    <string name="detail_name">Movie Detail</string>

    <!-- Serialized String for intent -->
    <string name="Serialized">Serialized_Data</string>

    <!-- Menu Strings for sorting by Popularity or Ratings -->
    <string name="action_sort_popularity">Popularity</string>
    <string name="action_sort_ratings">Ratings</string>
    <string name="action_sort_favorite">Favorite</string>

    <!-- Poster image strings -->
    <string name="poster_image">Poster Image</string>
    <string name="poster_thumbnail">Poster Thumbnail</string>

    <!-- Hard Coded Strings in the layout -->
    <string name="original_title">ORIGINAL TITLE</string>
    <string name="user_rating">USER RATING</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="synopsis">SYNOPSIS</string>

    <!-- Ratings value extra string -->
    <string name="out_of_ten">/10</string>

    <!-- Favorites value extra string -->
    <string name="favorite">FAVORITE</string>

    <!-- Trailers value extra string -->
    <string name="trailers">Trailers</string>
    <string name="image_trailer">Image Trailer</string>
    <string name="movie_title">Movie Title</string>

    <!-- Reviews value extra string -->
    <string name="review_author">Review Author</string>
    <string name="review_content">Review Content</string>
    <string name="movie_reviews">Movie Reviews</string>


</resources>
