<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/colorAccent"
                app:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/whiteText"
                android:textSize="32sp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/poster_detail_image"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:contentDescription="@string/poster_thumbnail" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title"
                    android:textSize="12sp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:id="@+id/originalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating"
                    android:textSize="12sp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:id="@+id/userRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textSize="12sp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="4dp"
                    android:text="@string/favorite"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/poster_detail_image"
                android:text="@string/synopsis"
                android:paddingTop="24dp"
                android:paddingLeft="28dp"
                android:paddingRight="28dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/overView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/synopsis"
                android:paddingTop="4dp"
                android:paddingLeft="28dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingStart="28dp"
                android:paddingEnd="16dp" />


            <TextView
                android:id="@+id/tv_trailers_label"
                android:textColor="@color/whiteText"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/trailers"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overView" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label">
            </android.support.v7.widget.RecyclerView>


            <TextView
                android:id="@+id/tv_reviews_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center|center_vertical"
                android:text="@string/movie_reviews"
                android:textColor="@color/whiteText"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_trailers" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label">
            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>